--- a/requirements.txt
+++ b/requirements.txt
@@ -27,7 +27,6 @@ gensim>=4.2.0
 # Visualization
 matplotlib>=3.5.0
 seaborn>=0.11.0
-plotly>=5.10.0
 graphviz>=0.20.0
 
 # Explainability
@@ -64,3 +63,5 @@ jupyter>=1.0.0
 ipykernel>=6.15.0
 
 xlrd
+statsmodels
+chardet
